[package]
name = "todo-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.40"
mongodb = "3.2.2"
rand = "0.9.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
serde = "1.0.219"
serde_json = "1.0.140"
